Get & Post OXP Switches & Interfaces #32
